Enhance README with application details and instructions
Expanded README with detailed application features, installation instructions, usage guidelines, and customization options for the MediCare Hospital JavaFX application.